# becomeAnAuthor

./: .cursorrules  .dependency-cruiser.js  .env.example  .gitignore  AGENTS.md  README.md  any_audit 2.txt  become-an-author.icns file.icns  build_output.txt  current_features.md  dev_web_output.txt  eslint.config.mjs  lint_final.txt  lint_output.txt  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  test_output.txt  tsc_output.txt  tsconfig.json  verify_smoke.py  vitest.config.ts
.ai/: README.md  rules-quick.md  rules.md
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/logs/: app.log.2025-12-19
backend/src/: lib.rs
backend/src/commands/: analysis.rs  app_state.rs  backup.rs  backup_emergency.rs  backup_manuscript.rs  chat.rs  codex.rs  collaboration.rs  google_oauth.rs  idea.rs  mention.rs  mod.rs  preset.rs  project.rs  scene.rs  scene_note.rs  search.rs  security.rs  seed.rs  series.rs  snippet.rs  trash.rs  world_map.rs  world_timeline.rs
backend/src/models/: analysis.rs  backup.rs  chat.rs  codex.rs  idea.rs  mod.rs  project.rs  scene.rs  scene_note.rs  snippet.rs  world_map.rs  world_timeline.rs
backend/src/storage/: sqlite.rs
backend/src/utils/: io.rs  mod.rs  paths.rs  security.rs  text.rs  timestamp.rs  validation.rs
backend/tests/: project_restore_series_tests.rs  security_tests.rs
docs/: 01-system-overview.md  02-backend-architecture.md  03-frontend-architecture.md  04-security-data-integrity.md  05-api-endpoints.md  README.md  (+37 more)
(+832 files in other folders)
