[package]
name = "become-an-author"
version = "0.0.1"
description = "A novel writing application with AI assistance"
authors = ["Become An Author Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-log = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-notification = "2.1"
tauri-plugin-shell = "2.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
sha2 = "0.10"
base64 = "0.22"
open = "5"

# Secure storage (OS keychain)
keyring = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
log = "0.4"
slug = "0.1"

# Markdown parsing
gray_matter = "0.2"
serde_yaml = "0.9"

# Document generation
docx-rs = "0.4"
epub-builder = "0.7"
